--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# 我的忽略
+/data
+*.pkl
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -102,6 +106,3 @@ venv.bak/
 
 # mypy
 .mypy_cache/
-
-/data
-/itchat.pkl
